deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: APP_NAME
  namespace: NAMESPACE_NAME
spec:
  replicas: 1
  selector:
    matchLabels:
      app: APP_NAME
  template:
    metadata:
      labels:
        app: APP_NAME
    spec:
      containers:
        - name: CONTAINER_NAME
          image: IMAGE_URL
          imagePullPolicy: Always
          ports:
            - containerPort: CONTAINER_PORT
              protocol: TCP
