service.yaml
apiVersion: v1
kind: Service
metadata:
  name: APP_NAME
  namespace: NAMESPACE_NAME
spec:
  selector:
    app: APP_NAME
  ports:
    - protocol: TCP
      port: PORT
      targetPort: TARGETPORT
